# motor-control

./: .gitignore  README.md
src/motor-control/: motor-control.py  motor_control.py
src/motor-control/feetech-tuna/: README.md
src/raspberry-pi-code/: capture_robot_position.py  controller.py  motor_util.py  receiver.py  robot_starting_position.csv  servo_detection.py  servo_detection_windows.py  set_robot_position.py
src/raspberry-pi-code/hands/: hands_reciever.py  hands_util.py
src/raspberry-pi-code/test/: test-100-read-position.py  test-101-move-position.py  test-102-calibrate-encoder.py  test-103-no-move-with-calibration.py  test-104-calibrate-and-move.py  test-17-single_servo_calibration_test.py  test-18-multiturn-test.py
src/robot/v1/: controller.py  receiver.py  robot_starting_position.csv
src/ros2/src/servo_control/: package.xml  setup.py
src/ros2/src/servo_control/servo_control/: servo_control_node.py
src/tests/button/: button-test.py
src/tests/pwm/: test-1.py  test-2.py  test-3.py  test-4.py  test-5.py  test-6.py  test-7.py  test-8.py
src/tests/serial-bus/: change_servo_id_perm.py  change_servo_id_temp.py  test-1-detect_servos.py  test-10-mirror-position_beta.py  test-12-mirror_position_multi_turn.py  test-13-mirror_position_multi_turn_full.py  test-14-mirror_position_Multipliers.py  test-15-mirror_position_full_Multipliers.py  test-16-mirror_position_full_primed.py  test-2-move_two_servos.py  test-3-move_and_read_pos_servo.py  test-4-move_read_all.py  test-5-move_read_series.py  test-6-three_rotations.py  test-7-three_rotations_2.py  (+2 more)
(+8 files in other folders)
