<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo_control</name>
  <version>0.0.0</version>
  <description>Servo control package for ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>gpiozero</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
